--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,39 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="styles/index.css" />
     <script async defer type="text/javascript" src="scripts/index.js"></script>
+    <link rel="stylesheet" type="text/css" href="styles/index.css" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="assets/images/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="assets/images/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="assets/images/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="assets/images/favicon/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="assets/images/favicon/safari-pinned-tab.svg"
+      color="#e29c9c"
+    />
+    <link rel="shortcut icon" href="assets/images/favicon/favicon.ico" />
+    <meta name="msapplication-TileColor" content="#e29c9c" />
+    <meta
+      name="msapplication-config"
+      content="assets/images/favicon/browserconfig.xml"
+    />
+    <meta name="theme-color" content="#e29c9c" />
+
     <title>tannor.net</title>
   </head>
   <body>
@@ -17,7 +48,7 @@
         <main>
           <div>
             <img
-              src="images/tannor.png"
+              src="assets/images/tannor.png"
               alt="portrait photo of Tannor in a gray sweater with green cement columns in the background"
             />
           </div>
@@ -88,7 +119,7 @@
             <div>
               <h4>SongBird</h4>
               <img
-                src="images/projects/song-bird.png"
+                src="assets/images/projects/song-bird.png"
                 alt="A screenshot of the SongBird website preview image showing yellow buttons and a text input with song lyrics"
               />
               <p>
@@ -100,11 +131,10 @@
                 at once
               </p>
             </div>
-
             <div>
               <h4>Google Meet Input Toggler</h4>
               <img
-                src="images/projects/meet-toggler.png"
+                src="assets/images/projects/meet-toggler.png"
                 alt="A screenshot of the Chrome extension store showing the Google Meet Input Toggler extension"
               />
               <p>
@@ -120,11 +150,10 @@
                 camera with global shortcuts
               </p>
             </div>
-
             <div>
               <h4>This site</h4>
               <img
-                src="images/projects/portfolio.png"
+                src="assets/images/projects/portfolio.png"
                 alt="A screenshot showing the site you're already on. Seems unnecessary."
               />
               <p>
@@ -137,7 +166,6 @@
                 here)
               </p>
             </div>
-
             <div>
               <h4>And more...</h4>
               <p>
@@ -187,7 +215,6 @@
             <strong>CSS and Tailwind</strong> to create beautiful UI and
             thoughtful UX.
           </p>
-
           <h3>University of Redlands and Walla Walla University</h3>
           <p>
             In my pre-coding days, I worked in higher education at various
@@ -208,7 +235,6 @@
             1000+ hour <strong>coding bootcamp</strong> with a < 4% acceptance
             rate) after attending from November 2020 to April 2021.
           </p>
-
           <h3>business administration & finance</h3>
           <ul>
             <li>
