--- a/index.html
+++ b/index.html
@@ -59,56 +59,61 @@
           <br />
           <p>Hey there 👋</p>
           <p>
-            Welcome to my website! It's here to give a brief intro to who I am
-            professionally, and of course to show
-            <strong>I can make things with code</strong>.
+            Welcome to my website! Keep reading to understand who I am and how
+            <strong>I make cool things with code</strong>.
           </p>
 
           <h2>who i am</h2>
           <p>
             I'm a <strong>full-stack software engineer</strong> living in
-            Portland, Oregon. My family and I love it here, and my dream career
-            in tech is one where I get to learn and grow in this community as
-            part of an intimate and highly collaborative team. My biggest
-            strengths are <strong>adaptability</strong> and
-            <strong>willingness to explore</strong> new things. I've yet to find
-            a stack I can't make myself useful in, and quickly.
+            Portland, Oregon. I love the PNW, and a career in tech for me
+            emphasizes learning and growing as part of my local community.
+          </p>
+          <p>
+            I enjoy contributing to
+            <strong>intimate and highly collaborative teams</strong> in need of
+            someone with <strong>adaptability</strong> and
+            <strong>eagerness to explore</strong> new ideas. I've yet to find a
+            stack I can't make myself useful in, and quickly.
           </p>
 
           <h2>what i'm good at</h2>
           <ul>
             <li>
-              <strong>frontend web development</strong> (and I **actually like
-              CSS**. Really.)
+              <strong>frontend web development</strong> (I love torturing myself
+              with CSS and obsessing over <em>just</em> the right color or
+              placement)
             </li>
             <li>
-              <strong>backend development</strong>, designing APIs and evolving
-              them intelligently in a sympathetic and non-breaking way
+              <strong>backend development</strong> (I'm great at designing
+              intuitive APIs and evolving contracts in a sympathetic and
+              non-breaking way)
             </li>
             <li>
-              writing <strong>SQL</strong> (I've been using it for about 10
-              years, since college)
+              <strong>writing great SQL</strong> (I've been using it for about
+              10 years, since college)
             </li>
             <li>
-              <strong>scripting and automation</strong> (I sometimes write
-              JavaScript on my phone??)
+              <strong>scripting and automation</strong> (in my free time I like
+              to write automations for my phone in javascript or iOS shortcuts)
             </li>
             <li>
-              <strong>clear, honest communication</strong>
+              <strong>math and analytical thinking</strong>, but also
+              <strong>sympathetic, clear communication</strong>
             </li>
           </ul>
 
           <h2>languages and technologies</h2>
           <ul>
-            <li><strong>TypeScript / JavaScript / Node</strong></li>
+            <li>
+              <strong>TypeScript / JavaScript / Node</strong> (anything
+              JavaScript adjacent)
+            </li>
             <li>
               <strong>React</strong>
             </li>
-            <li>CSS (both vanilla and with Tailwind)</li>
-            <li>
-              <strong>Scala</strong>
-            </li>
-            <li>Python</li>
+            <li>CSS (vanilla, Tailwind, or whatever library you're using)</li>
+            <li><strong>Scala</strong> and <strong>Python</strong></li>
             <li>SQL (mostly PostgreSQL)</li>
             <li>GraphQL</li>
             <li>AWS</li>
@@ -181,19 +186,20 @@
 
           <h2>where i've worked</h2>
           <p>
-            My last software job was at small fintech startup,
-            <a href="https://flowfi.com/">Flow Finance</a>, where I was the only
-            cold hire on the engineering team and was
+            My last software job was at high-growth fintech,
+            <a href="https://flowfi.com/">FlowFi</a>, where I was the only cold
+            hire on the engineering team and was
             <strong
               >quickly marked for promotion from junior to mid within 6
               months</strong
-            >.
+            >. I'm currently doing some full-stack contract work for them in my
+            spare time.
           </p>
 
           <h3>Flow Finance</h3>
           <span>
             <h4>Software Engineer, Backend</h4>
-            Jul 2022 - Jan 2023
+            <em>~ Jul 2022 to Jan 2023 ~</em>
           </span>
           <p>
             My primary responsibility was to build and maintain an API for
@@ -205,11 +211,11 @@
           </p>
           <span>
             <h4>Junior Software Engineer, Frontend</h4>
-            Jul 2021 - Jul 2022
+            <em>~ Jul 2021 to Jul 2022 ~</em>
           </span>
           <p>
             I Developed major features for
-            <strong>internal and costomer-facing web apps</strong> with
+            <strong>internal and customer-facing web apps</strong> with
             <strong>Typescript, React</strong>, and Redux. Working closely with
             our product and design teams, I used
             <strong>CSS and Tailwind</strong> to create beautiful UI and
@@ -229,32 +235,25 @@
 
           <h2>what i've studied</h2>
           <h3>full-stack web development</h3>
-          <p>
-            I graduated from
-            <a href="https://www.appacademy.io/">App Academy</a> (an intense
-            1000+ hour <strong>coding bootcamp</strong> with a < 4% acceptance
-            rate) after attending from November 2020 to April 2021.
-          </p>
+          <ul>
+            <li>
+              graduated from
+              <a href="https://www.appacademy.io/">App Academy</a> (a
+              world-class 1000+ hour <strong>coding bootcamp</strong>) in April
+              2021
+            </li>
+          </ul>
           <h3>business administration & finance</h3>
           <ul>
             <li>
-              I have my <strong>MBA (Finance concentration)</strong> from
-              <a href="https://redlands.edu/">University of Redlands</a> where I
-              attended from 2018 to 2019.
+              <strong>MBA with a Finance concentration</strong> from
+              <a href="https://redlands.edu/">University of Redlands</a>
             </li>
             <li>
-              Before that, I went to
-              <a href="https://wallawalla.edu/">Walla Walla University</a> from
-              2011 to 2015 where I got my <strong>BBA</strong> (Bachelor of
-              Business Administration, also with a Finance concentration).
+              <strong>BBA</strong> (Bachelor of Business Administration) from
+              <a href="https://wallawalla.edu/">Walla Walla University</a>
             </li>
           </ul>
-          <p>
-            I graduated from
-            <a href="https://www.appacademy.io/">App Academy</a> (an intense
-            1000+ hour <strong>coding bootcamp</strong> with a < 4% acceptance
-            rate) after attending from November 2020 to April 2021.
-          </p>
 
           <h2>would you like to know more?</h2>
           <p>Send me an email 👇</p>
