--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             <strong>CSS and Tailwind</strong> to create beautiful UI and
             thoughtful UX.
           </p>
-          <h3>University of Redlands and Walla Walla University</h3>
+          <h3>Higher Education Admin</h3>
           <p>
             In my pre-coding days, I worked in higher education at various
             tech-adjacent admin roles, both for
