--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
       content="assets/images/favicon/browserconfig.xml"
     />
     <meta name="theme-color" content="#e29c9c" />
-
-    <title>tannor.net</title>
+    <title>Tannor Breitigam</title>
   </head>
   <body>
     <div id="site-container">
@@ -59,7 +58,7 @@
           <br />
           <p>Hey there 👋</p>
           <p>
-            Welcome to my website! Keep reading to understand who I am and how
+            Welcome to my website! Read on to understand who I am and how
             <strong>I make cool things with code</strong>.
           </p>
 
@@ -109,14 +108,17 @@
               <strong>TypeScript / JavaScript / Node</strong> (anything
               JavaScript adjacent)
             </li>
+            <li><strong>React</strong>, Parcel, Apollo, Redux</li>
             <li>
-              <strong>React</strong>
+              HTML, CSS (vanilla, Tailwind, or whatever library you're using)
             </li>
-            <li>CSS (vanilla, Tailwind, or whatever library you're using)</li>
             <li><strong>Scala</strong> and <strong>Python</strong></li>
-            <li>SQL (mostly PostgreSQL)</li>
-            <li>GraphQL</li>
-            <li>AWS</li>
+            <li><strong>SQL</strong> (mostly PostgreSQL)</li>
+            <li><strong>GraphQL</strong>, REST</li>
+            <li>
+              <strong>AWS</strong> (S3, Lambda, AppSync, CloudFormation, SQS,
+              SNS, etc)
+            </li>
           </ul>
 
           <h2>some things i've built</h2>
@@ -132,8 +134,8 @@
                 <a href="https://github.com/breizeway/tab-lab">Github</a>
               </p>
               <em>
-                A simple markdown editor for lyrics that displays the whole song
-                at once
+                A simple markdown editor for lyrics that always displays the
+                entire song
               </em>
             </div>
             <div>
@@ -151,8 +153,8 @@
                 <a href="https://github.com/breizeway/meet-toggler">Github</a>
               </p>
               <em>
-                A Chrome extension to toggle your Google Meet microphone or
-                camera with global shortcuts
+                Toggle your Google Meet microphone or camera in Chrome with
+                global shortcuts
               </em>
             </div>
             <div>
@@ -166,20 +168,17 @@
                 *
                 <a href="https://github.com/breizeway/portfolio">Github</a>
               </p>
-              <em>
-                A portfolio site to show off my skills and projects (you are
-                here)
-              </em>
+              <em> A site to show off me and my code (you are here) </em>
             </div>
             <div>
               <h4>And more...</h4>
               <em>
-                I'm working on new things all the time. Take a look at
+                Take a look at
                 <a href="https://github.com/breizeway?tab=repositories">
                   my Github repositories page</a
                 >
-                to see more (including an embarrassing array of old projects
-                that likely don't work anymore).
+                to see more cool things (or an embarrassing array of old
+                projects that likely don't work anymore, you decide).
               </em>
             </div>
           </section>
@@ -223,8 +222,8 @@
           </p>
           <h3>Higher Education Admin</h3>
           <p>
-            In my pre-coding days, I worked in higher education at various
-            tech-adjacent admin roles, both for
+            In my pre-coding days, I worked in various tech-adjacent admin
+            roles, both for
             <a href="https://wallawalla.edu/">Walla Walla University</a> and
             <a href="https://redlands.edu/">University of Redlands</a>. I
             <strong>wrote SQL and managed BI systems</strong>, tuition AR/AP,
