--- a/index.html
+++ b/index.html
@@ -52,21 +52,21 @@
             />
           </div>
           <p>
-            <a href="https://github.com/breizeway/">Github</a> *
-            <a href="https://www.linkedin.com/in/tannor/">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/tannor/">LinkedIn</a> *
+            <a href="https://github.com/breizeway/">Github</a>
           </p>
           <br />
           <p>Hey there 👋</p>
           <p>
-            Welcome to my website! Read on to understand who I am and how
+            Welcome to my website! Read on to understand more about me and how
             <strong>I make cool things with code</strong>.
           </p>
 
           <h2>who i am</h2>
           <p>
             I'm a <strong>full-stack software engineer</strong> living in
-            Portland, Oregon. I love the PNW, and a career in tech for me
-            emphasizes learning and growing as part of my local community.
+            Portland, Oregon. I love the PNW, and for me a career in tech
+            emphasizes learning and growing with my local community.
           </p>
           <p>
             I enjoy contributing to
