--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
             <strong>CSS and Tailwind</strong> to create beautiful UI and
             thoughtful UX.
           </p>
-          <h3>Higher Education Admin</h3>
+          <h3>Higher Education IT & IS</h3>
           <p>
             In my pre-coding days, I worked in various tech-adjacent admin
             roles, both for
@@ -242,7 +242,7 @@
               2021
             </li>
           </ul>
-          <h3>business administration & finance</h3>
+          <h3>business admin & finance</h3>
           <ul>
             <li>
               <strong>MBA with a Finance concentration</strong> from
