--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <li>
               HTML, CSS (vanilla, Tailwind, or whatever library you're using)
             </li>
-            <li><strong>Scala</strong> and <strong>Python</strong></li>
+            <li><strong>Scala</strong>, <strong>Python</strong></li>
             <li><strong>SQL</strong> (mostly PostgreSQL)</li>
             <li><strong>GraphQL</strong>, REST</li>
             <li>
