--- a/index.html
+++ b/index.html
@@ -245,11 +245,12 @@
           <h3>business admin & finance</h3>
           <ul>
             <li>
-              <strong>MBA with a Finance concentration</strong> from
+              got an <strong>MBA with a Finance concentration</strong> from
               <a href="https://redlands.edu/">University of Redlands</a>
             </li>
             <li>
-              <strong>BBA</strong> (Bachelor of Business Administration) from
+              and before that a <strong>BBA</strong> (Bachelor of Business
+              Administration) from
               <a href="https://wallawalla.edu/">Walla Walla University</a>
             </li>
           </ul>
@@ -273,8 +274,10 @@
         </main>
 
         <footer>
-          <a href="https://github.com/breizeway/portfolio">about this site</a> |
-          © <span id="copyright-year"></span> Tannor Breitigam
+          <a href="https://github.com/breizeway/portfolio/blob/main/README.md"
+            >about</a
+          >
+          | © <span id="copyright-year"></span> Tannor Breitigam
         </footer>
       </div>
     </div>
