--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <br />
           <p>Hey there 👋</p>
           <p>
-            Welcome to my website! Read on to understand more about me and how
+            Welcome to my website! Read on to learn more about me and how
             <strong>I make cool things with code</strong>.
           </p>
 
@@ -168,7 +168,7 @@
                 *
                 <a href="https://github.com/breizeway/portfolio">Github</a>
               </p>
-              <em> A site to show off me and my code (you are here) </em>
+              <em> A site to showcase me and my code (you are here) </em>
             </div>
             <div>
               <h4>And more...</h4>
@@ -255,7 +255,10 @@
             </li>
           </ul>
 
-          <h2>would you like to know more?</h2>
+          <h2 id="know-more-heading">would you like to know more?</h2>
+          <p id="know-more-gif">
+            <img src="assets/images/desire-to-know-more.gif" />
+          </p>
           <p>Send me an email 👇</p>
           <form id="contact-form">
             <div>
