copy; simplification; new project

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div>
             <img
               src="assets/images/tannor.png"
-              alt="portrait photo of Tannor in a gray sweater with green cement columns in the background"
+              alt="portrait photo of Tannor in a gray sweater"
             />
           </div>
           <p>
@@ -58,22 +58,25 @@
           <br />
           <p>Hey there 👋</p>
           <p>
-            Welcome to my website! Read on to learn more about me and how
+            Welcome to my website! Come learn more about me and how
             <strong>I make cool things with code</strong>.
           </p>
 
           <h2>who i am</h2>
           <p>
-            I'm a <strong>full-stack software engineer</strong> living in
-            Portland, Oregon. I love the PNW, and for me a career in tech
-            emphasizes learning and growing with my local community.
+            I'm a <strong>full-stack software engineer</strong> in Portland,
+            Oregon. I love the PNW, and my journey in tech prioritizes
+            <strong>learning and growing</strong> within my community.
           </p>
           <p>
-            I enjoy contributing to
-            <strong>intimate and highly collaborative teams</strong> in need of
-            someone with <strong>adaptability</strong> and
-            <strong>eagerness to explore</strong> new ideas. I've yet to find a
-            stack I can't make myself useful in, and quickly.
+            I'm into <strong>difficult puzzles and good design</strong>. I'm not
+            concerned with any specific tech stack, but rather motivated by
+            working with <strong>passionate and uplifting people</strong>.
+          </p>
+          <p>
+            I'm open to
+            <strong>both full-time and contract</strong> opportunities right
+            now. <a href="#know-more-heading">Get in touch</a>.
           </p>
 
           <h2>what i'm good at</h2>
@@ -84,20 +87,21 @@
               placement)
             </li>
             <li>
-              <strong>backend development</strong> (I'm great at designing
-              intuitive APIs and evolving contracts in a sympathetic and
-              non-breaking way)
+              <strong>backend development</strong> (I'm experienced in designing
+              intuitive APIs and evolving contracts in sympathetic and
+              non-breaking ways)
             </li>
             <li>
-              <strong>writing great SQL</strong> (I've been using it for about
-              10 years, since college)
+              <strong>writing SQL</strong> (for nearly 10 years now, since I was
+              a student worker in college)
             </li>
             <li>
               <strong>scripting and automation</strong> (in my free time I like
-              to write automations for my phone in javascript or iOS shortcuts)
+              to write automations on my phone in javascript or with iOS
+              shortcuts)
             </li>
             <li>
-              <strong>math and analytical thinking</strong>, but also
+              <strong>analytical thinking</strong>, but also
               <strong>sympathetic, clear communication</strong>
             </li>
           </ul>
@@ -124,10 +128,32 @@
           <h2>some things i've built</h2>
           <section class="projects">
             <div>
+              <h4>FlowFi Onboarding</h4>
+              <img
+                src="assets/images/projects/flowfi-onboarding.png"
+                alt="a screenshot of a web page with a sign up prompt"
+              />
+              <p>
+                <a href="https://app.flowfi.com/#/experts-apply">For experts</a>
+                *
+                <a href="https://app.flowfi.com/#/customers-apply"
+                  >For customers</a
+                >
+              </p>
+              <em>
+                Onboard financial experts and customers to FlowFi's financial
+                services platform (you may use alt + click on the progress
+                indicator up top to view other pages).
+                <strong
+                  >Note: these pages are still being actively developed</strong
+                >.
+              </em>
+            </div>
+            <div>
               <h4>SongBird</h4>
               <img
                 src="assets/images/projects/song-bird.png"
-                alt="A screenshot of the SongBird website preview image showing yellow buttons and a text input with song lyrics"
+                alt="a screenshot of the SongBird website showing yellow buttons and a text input with song lyrics"
               />
               <p>
                 <a href="https://songbird.tannor.net">Live Site</a> *
@@ -135,14 +161,15 @@
               </p>
               <em>
                 A simple markdown editor for lyrics that always displays the
-                entire song
+                entire song (this is a simple app I use on my laptop when
+                jamming; it's not recommended on a narrow screen)
               </em>
             </div>
             <div>
               <h4>Google Meet Input Toggler</h4>
               <img
                 src="assets/images/projects/meet-toggler.png"
-                alt="A screenshot of the Chrome extension store showing the Google Meet Input Toggler extension"
+                alt="a screenshot of the Google Meet Input Toggler extension on the Chrome store"
               />
               <p>
                 <a
@@ -168,31 +195,34 @@
                 *
                 <a href="https://github.com/breizeway/portfolio">Github</a>
               </p>
-              <em> A site to showcase me and my code (you are here) </em>
-            </div>
-            <div>
-              <h4>And more...</h4>
-              <em>
-                Take a look at
-                <a href="https://github.com/breizeway?tab=repositories">
-                  my Github repositories page</a
-                >
-                to see more cool things (or an embarrassing array of old
-                projects that likely don't work anymore, you decide).
-              </em>
+              <em> A site to showcase me and my code (you are here)</em>
             </div>
           </section>
+          <br />
+          <div>
+            <h4>And more...</h4>
+            <em>
+              Take a look at
+              <a href="https://github.com/breizeway?tab=repositories">
+                my Github repositories page</a
+              >
+              to see more cool things (or an embarrassing array of old projects
+              that likely don't work anymore, you decide).
+            </em>
+          </div>
 
           <h2>where i've worked</h2>
           <p>
-            My last software job was at high-growth fintech,
-            <a href="https://flowfi.com/">FlowFi</a>, where I was the only cold
-            hire on the engineering team and was
-            <strong
-              >quickly marked for promotion from junior to mid within 6
-              months</strong
-            >. I'm currently doing some full-stack contract work for them in my
-            spare time.
+            My last software gig was at high-growth fintech,
+            <a href="https://flowfi.com/">FlowFi</a>, where I was the
+            <strong>only cold hire</strong> on the engineering team, and moved
+            quickly <strong>from junior to mid</strong>. I was able to make
+            significant impacts to nearly every layer in their stack, front to
+            back.
+          </p>
+          <p>
+            I'm also doing some full stack contract work for them right now in
+            my spare time.
           </p>
 
           <h3>Flow Finance</h3>
@@ -200,35 +230,52 @@
             <h4>Software Engineer, Backend</h4>
             <em>~ Jul 2022 to Jan 2023 ~</em>
           </span>
-          <p>
-            My primary responsibility was to build and maintain an API for
-            initiating and
-            <strong>managing customer OAuth</strong> integrations. We built SAM
-            applications in Scala, leveraging AWS Lambda, AppSync, API Gateway
-            (and more) to expose both <strong>REST and GraphQL APIs</strong> to
-            internal applications.
-          </p>
+          <ul>
+            <li>
+              Built internal backend (<strong
+                >Lambda function built in Scala, exposed through GraphQL with
+                API Gateway, using DynamoDB for storage</strong
+              >) and frontend (<strong>TypeScript and React</strong>) services
+              that handled 3rd-party OAuth connections and ingest of customer
+              data
+            </li>
+            <li>
+              Created <strong>RESTful APIs</strong> with web hooks to promote
+              continued communication with existing connections
+            </li>
+            <li>
+              Rebuilt an existing Go app in Scala to transform and
+              <strong>export customer data as PDFs or spreadsheets</strong>
+            </li>
+          </ul>
           <span>
             <h4>Junior Software Engineer, Frontend</h4>
             <em>~ Jul 2021 to Jul 2022 ~</em>
           </span>
-          <p>
-            I Developed major features for
-            <strong>internal and customer-facing web apps</strong> with
-            <strong>Typescript, React</strong>, and Redux. Working closely with
-            our product and design teams, I used
-            <strong>CSS and Tailwind</strong> to create beautiful UI and
-            thoughtful UX.
-          </p>
+          <ul>
+            <li>
+              Developed the new frontend page (TypeScript, React, Redux) for
+              customers to manage member access and permissions on the FlowFi
+              platform
+            </li>
+            <li>
+              Helped greenfield a new app for accountants to automate their
+              processes, saving time and reducing cost
+            </li>
+            <li>
+              Developed major customer-facing features, troubleshot bugs, and
+              worked closely with our product and design teams
+            </li>
+          </ul>
           <h3>Higher Education IT & IS</h3>
           <p>
             In my pre-coding days, I worked in various tech-adjacent admin
             roles, both for
             <a href="https://wallawalla.edu/">Walla Walla University</a> and
             <a href="https://redlands.edu/">University of Redlands</a>. I
-            <strong>wrote SQL and managed BI systems</strong>, tuition AR/AP,
+            <strong>wrote SQL and managed BI systems</strong>
             and departmental <strong>IS/IT support and maintenance</strong>. I
-            also briefly served as an interim Director of
+            also filled in as interim Director of
             <strong>Institutional Research</strong> at WWU.
           </p>
 
@@ -238,8 +285,7 @@
             <li>
               graduated from
               <a href="https://www.appacademy.io/">App Academy</a> (a
-              world-class 1000+ hour <strong>coding bootcamp</strong>) in April
-              2021
+              world-class 1000+ hour <strong>coding bootcamp</strong>) in 2021
             </li>
           </ul>
           <h3>business admin & finance</h3>
@@ -256,9 +302,9 @@
           </ul>
 
           <h2 id="know-more-heading">would you like to know more?</h2>
-          <p id="know-more-gif">
+          <div id="know-more-gif-wrapper">
             <img src="assets/images/desire-to-know-more.gif" />
-          </p>
+          </div>
           <p>Send me an email 👇</p>
           <form id="contact-form">
             <div>
