--- a/index.html
+++ b/index.html
@@ -255,16 +255,20 @@
           <ul>
             <li>
               Developed the new frontend page (TypeScript, React, Redux) for
-              customers to manage member access and permissions on the FlowFi
-              platform
+              customers to
+              <strong>manage member access and permissions</strong> on the
+              FlowFi platform
             </li>
             <li>
-              Helped greenfield a new app for accountants to automate their
-              processes, saving time and reducing cost
+              Helped greenfield a new app for accountants to
+              <strong
+                >automate their processes, saving time and reducing cost</strong
+              >
             </li>
             <li>
-              Developed major customer-facing features, troubleshot bugs, and
-              worked closely with our product and design teams
+              Developed <strong>major customer-facing features</strong>,
+              troubleshot bugs, and worked closely with our product and design
+              teams
             </li>
           </ul>
           <h3>Higher Education IT & IS</h3>
@@ -302,9 +306,7 @@
           </ul>
 
           <h2 id="know-more-heading">would you like to know more?</h2>
-          <div id="know-more-gif-wrapper">
-            <img src="assets/images/desire-to-know-more.gif" />
-          </div>
+          <img id="know-more-gif" src="assets/images/desire-to-know-more.gif" />
           <p>Send me an email 👇</p>
           <form id="contact-form">
             <div>
