--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             back.
           </p>
           <p>
-            I'm also doing some full stack contract work for them right now in
+            I'm also doing some full-stack contract work for them right now in
             my spare time.
           </p>
 
