--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           </ul>
 
           <h2>some things i've built</h2>
-          <section class="projects">
+          <section id="projects">
             <div>
               <h4>FlowFi Onboarding</h4>
               <img
@@ -197,19 +197,18 @@
               </p>
               <em> A site to showcase me and my code (you are here)</em>
             </div>
+            <div class="projects__span-2">
+              <h4>And more...</h4>
+              <em>
+                Take a look at
+                <a href="https://github.com/breizeway?tab=repositories">
+                  my Github repositories page</a
+                >
+                to see more cool things (or an embarrassing array of old
+                projects that likely don't work anymore, you decide).
+              </em>
+            </div>
           </section>
-          <br />
-          <div>
-            <h4>And more...</h4>
-            <em>
-              Take a look at
-              <a href="https://github.com/breizeway?tab=repositories">
-                my Github repositories page</a
-              >
-              to see more cool things (or an embarrassing array of old projects
-              that likely don't work anymore, you decide).
-            </em>
-          </div>
 
           <h2>where i've worked</h2>
           <p>
