--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
           <h2>who i am</h2>
           <p>
             I'm a <strong>full-stack software engineer</strong> in Portland,
-            Oregon. I love the PNW, and my journey in tech prioritizes
-            <strong>learning and growing</strong> within my community.
+            Oregon. I love the PNW, and my journey in tech is about
+            <strong>learning and growing</strong> in my community.
           </p>
           <p>
             I'm into <strong>difficult puzzles and good design</strong>. I'm not
