--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             </li>
             <li>
               <strong>analytical thinking</strong>, but also
-              <strong>sympathetic, clear communication</strong>
+              <strong>empathetic, clear communication</strong>
             </li>
           </ul>
 
