--- a/index.html
+++ b/index.html
@@ -253,8 +253,9 @@
           </span>
           <ul>
             <li>
-              Developed the new frontend page (TypeScript, React, Redux) for
-              customers to
+              Developed the new frontend page (<strong
+                >TypeScript, React, Redux</strong
+              >) for customers to
               <strong>manage member access and permissions</strong> on the
               FlowFi platform
             </li>
@@ -265,9 +266,9 @@
               >
             </li>
             <li>
-              Developed <strong>major customer-facing features</strong>,
+              Created <strong>major customer-facing features</strong>,
               troubleshot bugs, and worked closely with our product and design
-              teams
+              teams to improve user experience
             </li>
           </ul>
           <h3>Higher Education IT & IS</h3>
