--- a/index.html
+++ b/index.html
@@ -277,9 +277,9 @@
             roles, both for
             <a href="https://wallawalla.edu/">Walla Walla University</a> and
             <a href="https://redlands.edu/">University of Redlands</a>. I
-            <strong>wrote SQL and managed BI systems</strong>
-            and departmental <strong>IS/IT support and maintenance</strong>. I
-            also filled in as interim Director of
+            <strong>wrote SQL, managed BI systems</strong>
+            and performed <strong>IS/IT support and maintenance</strong> for my
+            department. I also filled in as interim Director of
             <strong>Institutional Research</strong> at WWU.
           </p>
 
