--- a/index.html
+++ b/index.html
@@ -306,7 +306,11 @@
           </ul>
 
           <h2 id="know-more-heading">would you like to know more?</h2>
-          <img id="know-more-gif" src="assets/images/desire-to-know-more.gif" />
+          <img
+            id="know-more-gif"
+            class="hidden"
+            src="assets/images/desire-to-know-more.gif"
+          />
           <p>Send me an email 👇</p>
           <form id="contact-form">
             <div>
