--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
             </li>
             <li><strong>React</strong>, Parcel, Apollo, Redux</li>
             <li>
-              HTML, CSS (vanilla, Tailwind, or whatever library you're using)
+              semantic HTML, CSS (vanilla, Tailwind, or whatever library you're
+              using)
             </li>
             <li><strong>Scala</strong>, <strong>Python</strong></li>
             <li><strong>SQL</strong> (mostly PostgreSQL)</li>
