--- a/index.html
+++ b/index.html
@@ -109,15 +109,15 @@
           <h2>languages and technologies</h2>
           <ul>
             <li>
-              <strong>TypeScript / JavaScript / Node</strong> (anything
+              <strong>TypeScript, JavaScript, Node, Next.js</strong> (anything
               JavaScript adjacent)
             </li>
             <li><strong>React</strong>, Parcel, Apollo, Redux</li>
             <li>
-              semantic HTML, CSS (vanilla, Tailwind, or whatever library you're
-              using)
+              semantic <strong>HTML and CSS</strong> (vanilla, Tailwind, or
+              whatever library you're using)
             </li>
-            <li><strong>Scala</strong>, <strong>Python</strong></li>
+            <li><strong>Scala, Python</strong></li>
             <li><strong>SQL</strong> (mostly PostgreSQL)</li>
             <li><strong>GraphQL</strong>, REST</li>
             <li>
@@ -162,8 +162,9 @@
               </p>
               <em>
                 A simple markdown editor for lyrics that always displays the
-                entire song (this is a simple app I use on my laptop when
-                jamming; it's not recommended on a narrow screen)
+                entire song (this is a
+                <strong>basic app I use on my laptop</strong> when jamming; it's
+                not recommended on a narrow screen)
               </em>
             </div>
             <div>
