--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <p>
             I'm open to
             <strong>both full-time and contract</strong> opportunities right
-            now. <a href="#know-more-heading">Get in touch</a>.
+            now. <a href="#know-more-heading">Talk to me</a>.
           </p>
 
           <h2>what i'm good at</h2>
