--- a/index.html
+++ b/index.html
@@ -145,9 +145,24 @@
                 Onboard financial experts and customers to FlowFi's financial
                 services platform (you may use alt + click on the progress
                 indicator up top to view other pages).
-                <strong
-                  >Note: these pages are still being actively developed</strong
-                >.
+              </em>
+            </div>
+            <div>
+              <h4>Ball is Lyf3</h4>
+              <img
+                src="assets/images/projects/air-bud.png"
+                alt="a screenshot of the home page of ballislyf3.net"
+              />
+              <p>
+                <a href="https://ballislyf3.net/?leaderboard_mode=safe"
+                  >Live Site</a
+                >
+                *
+                <a href="https://github.com/breizeway/air-bud">Github</a>
+              </p>
+              <em>
+                A companion app for my private ESPN fantasy basketball league to
+                compare weekly stats across all teams
               </em>
             </div>
             <div>
@@ -165,25 +180,6 @@
                 entire song (this is a
                 <strong>basic app I use on my laptop</strong> when jamming; it's
                 not recommended on a narrow screen)
-              </em>
-            </div>
-            <div>
-              <h4>Google Meet Input Toggler</h4>
-              <img
-                src="assets/images/projects/meet-toggler.png"
-                alt="a screenshot of the Google Meet Input Toggler extension on the Chrome store"
-              />
-              <p>
-                <a
-                  href="https://chrome.google.com/webstore/detail/google-meet-input-toggler/hcbgpbodachfejmoecbbjnabdmigecnb"
-                  >Live Site</a
-                >
-                *
-                <a href="https://github.com/breizeway/meet-toggler">Github</a>
-              </p>
-              <em>
-                Toggle your Google Meet microphone or camera in Chrome with
-                global shortcuts
               </em>
             </div>
             <div>
