--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
           <h2>who i am</h2>
           <p>
             I'm a <strong>full-stack software engineer</strong> in Portland,
-            Oregon. I love the PNW, and my journey in tech is about
-            <strong>learning and growing</strong> in my community.
+            Oregon. I have a diverse background which includes coding bootcamp,
+            financial service at non-profits, and getting my MBA.
           </p>
           <p>
             I'm into <strong>difficult puzzles and good design</strong>. I'm not
-            concerned with any specific tech stack, but rather motivated by
+            concerned with a specific tech stack, but rather motivated by
             working with <strong>passionate and uplifting people</strong>.
           </p>
           <p>
@@ -82,18 +82,17 @@
           <h2>what i'm good at</h2>
           <ul>
             <li>
-              <strong>frontend web development</strong> (I love torturing myself
-              with CSS and obsessing over <em>just</em> the right color or
-              placement)
+              <strong>frontend web development</strong> (I absolutely love
+              TypeScript and striving toward pixel-perfect CSS)
             </li>
             <li>
               <strong>backend development</strong> (I'm experienced in designing
-              intuitive APIs and evolving contracts in sympathetic and
-              non-breaking ways)
+              semantic and intuitive APIs, especially in serverless
+              environments)
             </li>
             <li>
-              <strong>writing SQL</strong> (for nearly 10 years now, since I was
-              a student worker in college)
+              <strong>writing SQL</strong> (for nearly 10 years now, since I
+              taught myself as a student worker in college)
             </li>
             <li>
               <strong>scripting and automation</strong> (in my free time I like
@@ -109,17 +108,20 @@
           <h2>languages and technologies</h2>
           <ul>
             <li>
-              <strong>TypeScript, JavaScript, Node, Next.js</strong> (anything
-              JavaScript adjacent)
+              <strong>TypeScript, JavaScript, Node</strong> (anything JavaScript
+              adjacent)
             </li>
-            <li><strong>React</strong>, Parcel, Apollo, Redux</li>
+            <li><strong>React</strong>, Next.js, Redux</li>
             <li>
               semantic <strong>HTML and CSS</strong> (vanilla, Tailwind, or
               whatever library you're using)
             </li>
             <li><strong>Scala, Python</strong></li>
-            <li><strong>SQL</strong> (mostly PostgreSQL)</li>
-            <li><strong>GraphQL</strong>, REST</li>
+            <li>
+              <strong>SQL</strong> (mostly PostgreSQL) and noSQL systems like
+              DynamoDB
+            </li>
+            <li><strong>GraphQL</strong>, Apollo, URQL, RESTful APIs</li>
             <li>
               <strong>AWS</strong> (S3, Lambda, AppSync, CloudFormation, SQS,
               SNS, etc)
@@ -224,7 +226,7 @@
 
           <h3>Flow Finance</h3>
           <span>
-            <h4>Software Engineer, Backend</h4>
+            <h4>Software Engineer, Full Stack</h4>
             <em>~ Jul 2022 to Jan 2023 ~</em>
           </span>
           <ul>
