--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
               <em>
                 Onboard financial experts and customers to FlowFi's financial
                 services platform (you may use alt + click on the progress
-                indicator up top to view other pages).
+                indicator up top to view other pages)
               </em>
             </div>
             <div>
@@ -245,6 +245,10 @@
             <li>
               Rebuilt an existing Go app in Scala to transform and
               <strong>export customer data as PDFs or spreadsheets</strong>
+            </li>
+            <li>
+              Helped out with frontend development as needed and during crunch
+              time
             </li>
           </ul>
           <span>
