add site fade-in transition

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script async defer type="text/javascript" src="scripts/index.js"></script>
     <link rel="stylesheet" type="text/css" href="styles/index.css" />
+    <script type="text/javascript" src="scripts/index.js"></script>
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -23,11 +23,6 @@
       href="assets/images/favicon/favicon-16x16.png"
     />
     <link rel="manifest" href="assets/images/favicon/site.webmanifest" />
-    <!-- <link
-      rel="mask-icon"
-      href="assets/images/favicon/safari-pinned-tab.svg"
-      color="#e29c9c"
-    /> -->
     <link rel="shortcut icon" href="assets/images/favicon/favicon.ico" />
     <meta name="msapplication-TileColor" content="#e29c9c" />
     <meta
@@ -38,7 +33,7 @@
     <title>Tannor Breitigam</title>
   </head>
   <body>
-    <div id="site-container">
+    <div id="site-container" class="transparent">
       <div id="content">
         <header>
           <h1>Tannor Breitigam</h1>
