--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 alt="a screenshot of the home page of ballislyf3.net"
               />
               <p>
-                <a href="https://ballislyf3.net/?leaderboard_mode=safe"
+                <a href="http://localhost:3000/?leaderboard_safe_mode=true"
                   >Live Site</a
                 >
                 *
