--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <title>Tannor Breitigam</title>
   </head>
   <body>
-    <div id="site-container" class="transparent">
+    <div id="site-container" class="before-load">
       <div id="content">
         <header>
           <h1>Tannor Breitigam</h1>
