--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <ul>
             <li>
               <strong>frontend web development</strong> (I absolutely love
-              TypeScript and striving toward pixel-perfect CSS)
+              TypeScript and building pixel-perfect CSS)
             </li>
             <li>
               <strong>backend development</strong> (I'm experienced in designing
@@ -107,9 +107,10 @@
               adjacent)
             </li>
             <li><strong>React</strong>, Next.js, Redux</li>
+            <li><strong>Tailwind, Material UI</strong></li>
             <li>
-              semantic <strong>HTML and CSS</strong> (vanilla, Tailwind, or
-              whatever library you're using)
+              semantic <strong>HTML and CSS</strong> (either plain old CSS or
+              whatever system you're using)
             </li>
             <li><strong>Scala, Python</strong></li>
             <li>
