--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
           </div>
           <p>
             <a href="https://www.linkedin.com/in/tannor/">LinkedIn</a> *
-            <a href="https://github.com/breizeway/">Github</a>
+            <a href="https://github.com/breizeway/">Github</a> *
+            <a href="https://www.upwork.com/freelancers/~01ec278d10b13286c3?mp_source=share">upwork</a>
           </p>
           <br />
           <p>Hey there 👋</p>
